--- a/src/components/Experience.astro
+++ b/src/components/Experience.astro
@@ -3,18 +3,18 @@ import ExperienceItem from "./ExperienceItem.astro"
 const EXPERIENCIE = [
   {
     date: "Actualmente...",
-    title: "Creador de Contenido",
-    company: "Twitch",
+    title: "Desarrollador web",
+    company: "AMRtech",
     description:
-      "Divulgo sobre programación y desarrollo web en diferentes plataformas. Galardonado como mejor creador de contenido de habla no-inglesa en 2022 y mejor comunidad en 2023 por GitHub.",
-    link: "https://twitch.tv/midudev",
+      "Desarrollo y comercializo aplicaciones web para mi empresa AMRtech.",
+    link: "https://amrtech.com.ar",
   },
   {
-    date: "Septiembre 2022",
-    title: "Principal Frontend Engineer",
-    company: "Adevinta Spain",
+    date: "Actualmente...",
+    title: "Fotógrafo",
+    company: "Municipio de Lobos",
     description:
-      "Responsable de la plataforma, componentes y utilidades para la creación y desarrollo de aplicaciones web. Mejora de un 30% en la entrega de software. Implantación de medidas de integración continua y despliegue con A/B testing en más de 15 equipos.",
+      "Trabajo como fotógrafo en el área de Prensa y Comunicación del Municipio de Lobos.",
   },
 ]
 ---
